// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsEcsExecutionModule UT input changes should handle deployment change 1`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -12,3 +12,3 @@
        mountPoints = []
-       name = "backend-v1"
+       name = "change-backend-v1"
        portMappings = [{"
`;

exports[`AwsEcsExecutionModule UT input changes should handle desiredCount change 1`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -3,3 +3,3 @@
    cluster = var.ecs_cluster_region_qa.clusterArn
-   desired_count = 1
+   desired_count = 2
    launch_type = "FARGATE""
`;

exports[`AwsEcsExecutionModule UT input changes should handle executionId change 1`] = `
"- execution/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution/main.tf
resource "aws_ecs_service" "ecs-service-changed-execution-id" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "changed-execution-id"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-changed-execution-id.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.arn
}

- execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

+ execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-changed-execution-id" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-changed-execution-id" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

+ execution/outputs.tf
output "ecs-service-changed-execution-id-serviceArn" {
  value = aws_ecs_service.ecs-service-changed-execution-id.id
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution/outputs.tf
output "ecs-task-definition-changed-execution-id-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.revision
}

+ execution/outputs.tf
output "ecs-task-definition-changed-execution-id-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

+ execution/outputs.tf
output "sec-grp-SecurityGroup-changed-execution-id-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-changed-execution-id.arn
}

+ execution/outputs.tf
output "sec-grp-SecurityGroup-changed-execution-id-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-changed-execution-id.id
}"
`;

exports[`AwsEcsExecutionModule UT should CUD 2`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,3 @@
      {
-       command = ["/bin/sh"]
+       command = ["npm", "start"]
        environment = [{"
`;

exports[`AwsEcsExecutionModule UT should CUD 4`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,3 @@
      {
-       command = ["npm", "start"]
+       command = ["/bin/sh"]
        environment = [{"
`;

exports[`AwsEcsExecutionModule UT should CUD 6`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -3,3 +3,3 @@
    cluster = var.ecs_cluster_region_qa.clusterArn
-   desired_count = 1
+   desired_count = 2
    launch_type = "FARGATE""
`;

exports[`AwsEcsExecutionModule UT should CUD 8`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -11,3 +11,7 @@
        image = "docker.io"
-       mountPoints = []
+       mountPoints = [{
+           containerPath = "/mnt/test-filesystem"
+           readOnly = false
+           sourceVolume = "test-filesystem"
+         }]
        name = "backend-v1"
@@ -27,2 +31,8 @@
    task_role_arn = var.iam_role_ServerRole_backend.Arn
+   volume {
+     efs_volume_configuration {
+       file_system_id = var.efs_region_test_filesystem.FileSystemId
+     }
+     name = "test-filesystem"
+   }
  }

~ execution/terragrunt.hcl inputs = {
@@ -2,2 +2,3 @@
    ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
+   efs_region_test_filesystem = dependency.testModule.outputs["efs-region-test-filesystem"]
    iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]

~ execution/terragrunt.hcl mock_outputs = {
@@ -2,2 +2,3 @@
      "ecs-cluster-region-qa" = { clusterArn = "mock-ecs-cluster-region-qa-clusterArn" }
+     "efs-region-test-filesystem" = { FileSystemId = "mock-efs-region-test-filesystem-FileSystemId" }
      "iam-role-ServerRole-backend" = { Arn = "mock-iam-role-ServerRole-backend-Arn" }

+ execution/variables.tf
variable "efs_region_test_filesystem" {
  type = map(string)
}"
`;

exports[`AwsEcsExecutionModule UT should CUD 10`] = `
"+ execution/main.tf
depends_on = [aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet]
}

+ execution/main.tf
resource "aws_vpc_security_group_egress_rule" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet_egress_0" {
  provider = aws._123-us-east-1
  cidr_ipv4 = "10.0.0.0/8"
  description = "tcp 8080-8080 10.0.0.0/8"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
  from_port = 8080
  to_port = 8080"
`;

exports[`AwsEcsExecutionModule UT should CUD 12`] = `
"- execution/main.tf
depends_on = [aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet]
}

- execution/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- execution/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 2
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = [{
          containerPath = "/mnt/test-filesystem"
          readOnly = false
          sourceVolume = "test-filesystem"
        }]
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
  volume {
    efs_volume_configuration {
      file_system_id = var.efs_region_test_filesystem.FileSystemId
    }
    name = "test-filesystem"
  }
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/main.tf
resource "aws_vpc_security_group_egress_rule" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet_egress_0" {
  provider = aws._123-us-east-1
  cidr_ipv4 = "10.0.0.0/8"
  description = "tcp 8080-8080 10.0.0.0/8"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
  from_port = 8080
  to_port = 8080

- execution/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- execution/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

- execution/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- execution/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  efs_region_test_filesystem = dependency.testModule.outputs["efs-region-test-filesystem"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

- execution/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = { clusterArn = "mock-ecs-cluster-region-qa-clusterArn" }
    "efs-region-test-filesystem" = { FileSystemId = "mock-efs-region-test-filesystem-FileSystemId" }
    "iam-role-ServerRole-backend" = { Arn = "mock-iam-role-ServerRole-backend-Arn" }
    "subnet-region-private-subnet" = { SubnetId = "mock-subnet-region-private-subnet-SubnetId" }
    "vpc-region" = { VpcId = "mock-vpc-region-VpcId" }
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- execution/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- execution/variables.tf
variable "ecs_cluster_region_qa" {
  type = map(string)
}

- execution/variables.tf
variable "efs_region_test_filesystem" {
  type = map(string)
}

- execution/variables.tf
variable "iam_role_ServerRole_backend" {
  type = map(string)
}

- execution/variables.tf
variable "subnet_region_private_subnet" {
  type = map(string)
}

- execution/variables.tf
variable "vpc_region" {
  type = map(string)
}"
`;

exports[`AwsEcsExecutionModule UT should CUD tags 2`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -13,3 +13,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -28,3 +28,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsEcsExecutionModule UT should CUD tags 4`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -12,6 +12,2 @@
    task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -27,6 +27,2 @@
    task_role_arn = var.iam_role_ServerRole_backend.Arn
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region.VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region.VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsEcsExecutionModule UT should handle moduleId change 1`] = `
"- execution-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- execution-1/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution-1/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

- execution-1/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution-1/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- execution-1/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

- execution-1/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution-1/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

- execution-1/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- execution-1/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

- execution-1/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = { clusterArn = "mock-ecs-cluster-region-qa-clusterArn" }
    "iam-role-ServerRole-backend" = { Arn = "mock-iam-role-ServerRole-backend-Arn" }
    "subnet-region-private-subnet" = { SubnetId = "mock-subnet-region-private-subnet-SubnetId" }
    "vpc-region" = { VpcId = "mock-vpc-region-VpcId" }
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- execution-1/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- execution-1/variables.tf
variable "ecs_cluster_region_qa" {
  type = map(string)
}

- execution-1/variables.tf
variable "iam_role_ServerRole_backend" {
  type = map(string)
}

- execution-1/variables.tf
variable "subnet_region_private_subnet" {
  type = map(string)
}

- execution-1/variables.tf
variable "vpc_region" {
  type = map(string)
}

+ execution-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ execution-2/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

+ execution-2/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution-2/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ execution-2/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

+ execution-2/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

+ execution-2/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

+ execution-2/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

+ execution-2/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

+ execution-2/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = { clusterArn = "mock-ecs-cluster-region-qa-clusterArn" }
    "iam-role-ServerRole-backend" = { Arn = "mock-iam-role-ServerRole-backend-Arn" }
    "subnet-region-private-subnet" = { SubnetId = "mock-subnet-region-private-subnet-SubnetId" }
    "vpc-region" = { VpcId = "mock-vpc-region-VpcId" }
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

+ execution-2/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

+ execution-2/variables.tf
variable "ecs_cluster_region_qa" {
  type = map(string)
}

+ execution-2/variables.tf
variable "iam_role_ServerRole_backend" {
  type = map(string)
}

+ execution-2/variables.tf
variable "subnet_region_private_subnet" {
  type = map(string)
}

+ execution-2/variables.tf
variable "vpc_region" {
  type = map(string)
}"
`;
